# Emerald-isle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lab2/: Sky.h  TextRenderer.h  aircraft.h  bot.h  building.h  city.h  entity.h  ground.h  lab2_building.cpp  main.cpp  model1.h  model2.h  obelisc.h  obelisk.h  sphere.h  spire.h  tea.h  tree.h
lab2/models/air/: E45Aircraft_obj.mtl
lab2/models/bot/: botBase.gltf  dog final.glb  dog final.gltf  scene.gltf  untitled.gltf  untitled1.gltf
lab2/shaders/: aircraft.frag  aircraft.vert  bot.frag  bot.vert  box.frag  box.vert  computeShadow.glsl  glow.frag  glow.vert  ground.frag  ground.vert  model.frag  obelisc.frag  obelisc.vert  shadow.vert  sky.frag  sky.vert  sphere.frag  sphere.vert  spire.frag  tea.frag  tea.vert  tree.frag  tree.vert
lab2/textures/bricks/: floor_bricks_02_bump_1k.exr
